--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="card-footer">
               <h4>Product name: Cuceler</h4>
               <h4>Price: 12 AZN</h4>
-              <button class="btn btn-secondary float-right btn-sm">Buy</button
+              <button class="btn btn-secondary float-right btn-sm">Buy</button>
             </div>
           </div>
         </div>
